
  For example: A package named ``my-app`` containing a module named ``myapp``
  won't be automatically loaded anymore.

  Packages like this need to be loaded manually now::

    import morepath
    import myapp

    config = morepath.setup()
    config.scan(myapp)
    config.commit()

  See https://github.com/morepath/morepath/issues/319

- The ``template_directory`` directive will no longer inspect the current
  module if the template directory refers to an absolute path. This makes it
  easier to write tests where the current module might not be available.

  Fixes https://github.com/morepath/morepath/issues/299

- The ``identity_policy`` passes ``settings`` to the function if it
  defines such an argument. This way an identity policy can be created
  that takes settings into account.

  See https://github.com/morepath/morepath/issues/309

- Dots in the request path are now always normalized away. Before, Morepath
  basically relied on the client to do this, which was a potential security
  issue.

  See https://github.com/morepath/morepath/issues/329

- Additional documentation on how to serve static images in
  https://morepath.readthedocs.org/en/latest/more.static.html

0.10 (2015-04-09)
=================

- Server-side templating language support: there is now a ``template``
  argument for the ``html`` directive (and ``view`` and ``json``).
  You need to use a plugin to add particular template languages to
  your project, such as ``more.chameleon`` and ``more.jinja2``, but
  you can also add your own.

  See http://morepath.readthedocs.org/en/latest/templates.html

- Add a new "A Review of the Web" document to the docs to show how
  Morepath fits within the web.

  http://morepath.readthedocs.org/en/latest/web.html

- The publisher does not respond to a ``None`` render function
  anymore. Instead, the ``view`` directive now uses a default
  ``render_view`` if ``None`` is configured. This simplifies the