@@ -13,11 +13,13 @@ def setup_module(module):
 def test_import():
     import base
     import sub
+    import entrypoint
     from ns import real
     from ns import real2
+
     assert sorted(list(morepath_packages()),
                   key=lambda module: module.__name__) == [
-        base, real, real2, sub]
+        base, entrypoint, real, real2, sub]
 
 
 def test_autoconfig():
