@@ -10,6 +10,7 @@ deps=
      -e{toxinidir}/fixture_packages/ns
      -e{toxinidir}/fixture_packages/no_mp_ns
      -e{toxinidir}/fixture_packages/ns2
+     -e{toxinidir}/fixture_packages/entry-point
 commands=py.test morepath --cov morepath {posargs}
 
 [testenv:pep8]
