@@ -25,6 +25,11 @@ CHANGES
 
   See https://github.com/morepath/morepath/issues/319
 
+- The ``config.scan`` method now excludes 'test' and 'tests' directories
+  by default.
+
+  See https://github.com/morepath/morepath/issues/326  
+
 - The ``template_directory`` directive will no longer inspect the current
   module if the template directory refers to an absolute path. This makes it
   easier to write tests where the current module might not be available.
